--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -299,7 +299,7 @@
         <div class="content">
           <h2>Login</h2>
 
-          <form action="/login" method="POST" class="form">
+          <form action="/login-form" method="POST" class="form">
             <div class="inputBox container">
                 <label for="loginId"></label>
                 <input type="text" name="loginId" required /> <i>Username or Email</i>
