--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -301,12 +301,13 @@
 
           <form action="/login-form" method="POST" class="form">
             <div class="inputBox container">
-                <label for="loginId"></label>
-                <input type="text" name="loginId" required /> <i>Username or Email</i>
+              <label for="loginId"></label>
+              <input type="text" name="loginId" required />
+              <i>Username or Email</i>
             </div>
 
             <div class="inputBox">
-                <label for="password"></label>
+              <label for="password"></label>
               <input type="password" name="password" required /> <i>Password</i>
             </div>
 
