--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -11,39 +11,33 @@
         <h1 class="display-4 text-center py-1">To-Do App</h1>
         
         <div class="jumbotron p-3 shadow-sm">
-        <form id="create_form" action="/create-item" method="POST">
-          <div class="d-flex align-items-center">
-            <input
-              id="create_field"
-              name="todo"
-              autofocus
-              autocomplete="off"
-              class="form-control mr-3"
-              type="text"
-              style="flex: 1"
-            />
-            <button class="add_item btn btn-primary">Add New Item</button>
-          </div>
-        </form>
-      </div>
+         
+            <div class="d-flex align-items-center">
+              <input id="create_field" name='todo' autofocus autocomplete="off" class="form-control mr-3" type="text" style="flex: 1;">
+              <button class="add_item btn btn-primary">Add New Item</button>
+            </div>
+        
+        </div>
 
         <ul id="item_list" class=""list-group pb-5>
-
-
         </ul>
-    
-        <!-- <button class="show_more">Show More</button> -->
+
+        <button class="show_more">
+          Show More
+        </button>
         <br/>
         <br/>
       <form action='/logout' method="POST">
         <button> Logout <button>
       </form>
+
       <form action='/logout_from_all_devices' method="POST">
         <button> Logout from all devices <button>
       </form>
 
       </div>
-      <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
       <script src="/browser.js"></script>
+
     </body>
     </html>
