--- a/views/server.ejs
+++ b/views/server.ejs
@@ -3,21 +3,86 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style></style>
+    <title>Home Page</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: "Poppins", sans-serif;
+        background-color: #f8f8f8;
+        color: #333;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+      }
+
+      .container {
+        width: 100vw;
+        height: 100%;
+        text-align: center;
+        padding: 10px;
+        margin: auto;
+      }
+
+      h1 {
+        font-size: 3rem;
+        margin-bottom: 20px;
+      }
+
+      p {
+        font-size: 1.2rem;
+        line-height: 1.6;
+        margin-bottom: 40px;
+      }
+
+      .btn-container {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 50px;
+      }
+
+      .btn {
+        padding: 10px 20px;
+        margin: 0 10px;
+        background-color: #007bff;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        font-size: 1rem;
+        cursor: pointer;
+        transition: background-color 0.3s;
+      }
+
+      .btn:hover {
+        background-color: #0056b3;
+      }
+    </style>
   </head>
   <body>
-    <h3>Server is running</h3>
-    <form action="/register" method="'GET">
-      <div class="container">
-        <button type="submit">Register</button>
+    <div class="container">
+      <h1>Welcome to Our Website</h1>
+      <p>
+        Discover a world of possibilities with our innovative solutions. Our
+        mission is to empower individuals and businesses to thrive in the
+        digital era.
+      </p>
+      <div class="btn-container">
+        <form action="/login" method="'GET">
+          <div>
+            <button class="btn" type="submit">Login</button>
+          </div>
+        </form>
+        <form action="/register" method="'GET">
+          <div>
+            <button class="btn" type="submit">Register</button>
+          </div>
+        </form>
       </div>
-    </form>
-    <br />
-    <form action="/login" method="'GET">
-      <div class="container">
-        <button type="submit">Login</button>
-      </div>
-    </form>
+    </div>
   </body>
 </html>
