--- a/views/server.ejs
+++ b/views/server.ejs
@@ -13,7 +13,7 @@
         margin: 0;
         padding: 0;
         font-family: "Poppins", sans-serif;
-        background-color: #f8f8f8;
+        background-color: #bba4a4;
         color: #333;
         display: flex;
         justify-content: center;
@@ -43,43 +43,65 @@
       .btn-container {
         display: flex;
         justify-content: center;
-        margin-bottom: 50px;
+        align-items: center;
+        gap: 10px;
       }
 
-      .btn {
-        padding: 10px 20px;
-        margin: 0 10px;
-        background-color: #007bff;
-        color: #fff;
+      .button {
         border: none;
-        border-radius: 5px;
-        font-size: 1rem;
+        color: white;
+        padding: 16px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        transition-duration: 0.4s;
         cursor: pointer;
-        transition: background-color 0.3s;
+        text-transform: uppercase;
+        border-radius: 10px;
       }
 
-      .btn:hover {
-        background-color: #0056b3;
+      .button1 {
+        background-color: #04aa6d;
+        color: white;
+        border: 2px solid #04aa6d;
+      }
+
+      .button1:hover {
+        background-color: transparent;
+        color: black;
+      }
+
+      .button2 {
+        background-color: transparent;
+        color: black;
+        border: 2px solid #008cba;
+      }
+
+      .button2:hover {
+        background-color: #008cba;
+        color: white;
       }
     </style>
   </head>
   <body>
     <div class="container">
-      <h1>Welcome to Our Website</h1>
+      <h1>Welcome to Todo List App</h1>
       <p>
-        Discover a world of possibilities with our innovative solutions. Our
-        mission is to empower individuals and businesses to thrive in the
-        digital era.
+        Stay organized and boost your productivity with our intuitive todo list
+        app. Manage your tasks efficiently, set priorities, and track your
+        progress effortlessly. Start organizing your tasks today!
       </p>
       <div class="btn-container">
         <form action="/login" method="'GET">
           <div>
-            <button class="btn" type="submit">Login</button>
+            <button class="button button1" type="submit">Login</button>
           </div>
         </form>
         <form action="/register" method="'GET">
           <div>
-            <button class="btn" type="submit">Register</button>
+            <button class="button button2" type="submit">Register</button>
           </div>
         </form>
       </div>
