--- a/views/registerPage.ejs
+++ b/views/registerPage.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Design by foolishdeveloper.com -->
+    <link rel="icon" type="image/svg+xml" href="logo.png" />
     <title>Register</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
